--- a/Group_Math_and_Galois_Integers.ipynb
+++ b/Group_Math_and_Galois_Integers.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxjOxcox+2KM3J7/srjCcW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mgv6Czl9w5a9",
-        "outputId": "040c76be-370e-4d2b-ae72-f3eb504699ab"
+        "outputId": "7a9ef03b-8e0c-4af9-d0b9-93af65d230a1"
       },
       "outputs": [
         {
@@ -55,15 +54,15 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting galois\n",
-            "  Downloading galois-0.3.3-py3-none-any.whl (4.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.2/4.2 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numba<0.57,>=0.55 in /usr/local/lib/python3.10/dist-packages (from galois) (0.56.4)\n",
+            "  Downloading galois-0.3.5-py3-none-any.whl (4.2 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.2/4.2 MB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy<1.25,>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from galois) (1.22.4)\n",
+            "Requirement already satisfied: numba<0.58,>=0.55 in /usr/local/lib/python3.10/dist-packages (from galois) (0.56.4)\n",
             "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from galois) (4.5.0)\n",
-            "Requirement already satisfied: numpy<1.24,>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from galois) (1.22.4)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from numba<0.57,>=0.55->galois) (67.7.2)\n",
-            "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba<0.57,>=0.55->galois) (0.39.1)\n",
+            "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba<0.58,>=0.55->galois) (0.39.1)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from numba<0.58,>=0.55->galois) (67.7.2)\n",
             "Installing collected packages: galois\n",
-            "Successfully installed galois-0.3.3\n"
+            "Successfully installed galois-0.3.5\n"
           ]
         }
       ],
@@ -84,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CogNryxuyzCF",
-        "outputId": "bfef1d56-b739-4d4a-d630-cb247ee6c9b4"
+        "outputId": "81008204-a448-4867-84ba-acda1c170729"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,38 +109,33 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "%cd /content/drive/MyDrive/projects/group_math/\n",
         "\n",
         "# if its already cloned, then pull the latest:\n",
-        "!git pull origin main"
+        "%cd /content/drive/MyDrive/projects/group_math/\n",
+        "!git pull origin main\n",
+        "\n",
+        "# otherwise, clone it:\n",
+        "#%cd /content/drive/MyDrive/projects/\n",
+        "#!git clone https://github.com/bches/group_math.git\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gASTsTTAy-lj",
-        "outputId": "b1151029-b3b2-41b6-f2a1-5233a7c7ab3c"
+        "outputId": "e7d1da55-dded-4f33-d893-775ed700abed"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "/content/drive/MyDrive/projects/group_math\n",
-            "remote: Enumerating objects: 7, done.\u001b[K\n",
-            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 4 (delta 1), reused 4 (delta 1), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (4/4), 664 bytes | 1024 bytes/s, done.\n",
             "From https://github.com/bches/group_math\n",
             " * branch            main       -> FETCH_HEAD\n",
-            "   8daab62..9c1b6d0  main       -> origin/main\n",
-            "Updating 8daab62..9c1b6d0\n",
-            "Fast-forward\n",
-            " src/groups.py | 19 \u001b[32m+++++++++++++++++\u001b[m\u001b[31m--\u001b[m\n",
-            " 1 file changed, 17 insertions(+), 2 deletions(-)\n"
+            "Already up to date.\n"
           ]
         }
       ]
@@ -157,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xmVnmtgE2bhx",
-        "outputId": "1a76f5b0-be34-44c4-9f70-5366cbfb45ef"
+        "outputId": "d1d17c31-b89f-4692-dede-d6d564a67052"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,20 +191,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SYTBmp5r21pI",
-        "outputId": "5261facb-2fcb-4d63-f889-c4f78dc25b08"
+        "outputId": "a4559578-ab9e-4619-e449-a2d952a67d20"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "a+b= 1\n",
-            "add_grp= <Instance of additive_group at addr 140328804653552:\n",
+            "add_grp= <Instance of additive_group at addr 139660337334112:\n",
             "\tidentity = 0,\n",
             "\tmembers = array('i', [0, 1, 2, 3, 4, 5, 6]),\n",
             "\tinverse = array('i', [0, 6, 5, 4, 3, 2, 1]),\n",
-            "\tsubop = <Instance of incremental_set at addr 140328804654608:\n",
+            "\tsubop = <Instance of incremental_set at addr 139660337337712:\n",
             "\tindex = 0,\n",
             "\tmembers = array('i', [0, 1, 2, 3, 4, 5, 6])>,\n",
             "\tisBijective: True>\n",
@@ -246,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96HrKj9HIcGe",
-        "outputId": "e27a97b2-b2f2-429a-80b8-d5ecec2187fc"
+        "outputId": "09146912-1529-42db-f5c4-0319e6846634"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,9 +317,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "udcD2ql5KYGw",
-        "outputId": "a62ce1ea-cd6e-4ec0-9305-3809bf5ebd42"
+        "outputId": "ab49c203-b1f1-46f4-8874-60939b430344"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,9 +396,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HO6U6ZT0Ky2g",
-        "outputId": "f62f9f1a-7661-41b8-ccea-2f2bcd37001e"
+        "outputId": "86b0a170-4b83-4a4e-8636-ef5f92d6f989"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,9 +475,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Orw1TSeoL3dZ",
-        "outputId": "1ec69782-83cb-412b-dc80-9bb6c70bebf7"
+        "outputId": "533f35ea-65b1-47e4-9cd1-1ed3f39de82b"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +538,6 @@
         "  for x, y in permutations(range(7), 2):\n",
         "    if x == 1 or x == 0:\n",
         "      continue\n",
-        "    print('x,y:',x,y)\n",
         "    result1 = GF7(x) ** y\n",
         "    mul_grp.reset(x)\n",
         "    result2 = mul_grp(y)\n",
@@ -553,32 +546,47 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 411
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Dj7U_C_AMCHL",
-        "outputId": "066a33d9-834f-44cd-b3e0-6207f5064530"
+        "outputId": "47114a2c-e0d1-44e4-d526-dbd7c950588f"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "x,y: 2 0\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-8ae30dc5a800>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mresult1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGF7\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mmul_grp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0mresult2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmul_grp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m   \u001b[0mpassed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult1\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mresult2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%s ** %s = %s = %s (%s)'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/drive/MyDrive/projects/group_math/src/groups.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, repeat)\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mrepeat\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynthesize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/drive/MyDrive/projects/group_math/src/groups.py\u001b[0m in \u001b[0;36msynthesize\u001b[0;34m(self, *members)\u001b[0m\n\u001b[1;32m    141\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midentity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 143\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmember\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmember\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmembers\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+            "2 ** 0 = 1 = 1 (True)\n",
+            "2 ** 1 = 2 = 2 (True)\n",
+            "2 ** 3 = 1 = 1 (True)\n",
+            "2 ** 4 = 2 = 2 (True)\n",
+            "2 ** 5 = 4 = 4 (True)\n",
+            "2 ** 6 = 1 = 1 (True)\n",
+            "3 ** 0 = 1 = 1 (True)\n",
+            "3 ** 1 = 3 = 3 (True)\n",
+            "3 ** 2 = 2 = 2 (True)\n",
+            "3 ** 4 = 4 = 4 (True)\n",
+            "3 ** 5 = 5 = 5 (True)\n",
+            "3 ** 6 = 1 = 1 (True)\n",
+            "4 ** 0 = 1 = 1 (True)\n",
+            "4 ** 1 = 4 = 4 (True)\n",
+            "4 ** 2 = 2 = 2 (True)\n",
+            "4 ** 3 = 1 = 1 (True)\n",
+            "4 ** 5 = 2 = 2 (True)\n",
+            "4 ** 6 = 1 = 1 (True)\n",
+            "5 ** 0 = 1 = 1 (True)\n",
+            "5 ** 1 = 5 = 5 (True)\n",
+            "5 ** 2 = 4 = 4 (True)\n",
+            "5 ** 3 = 6 = 6 (True)\n",
+            "5 ** 4 = 2 = 2 (True)\n",
+            "5 ** 6 = 1 = 1 (True)\n",
+            "6 ** 0 = 1 = 1 (True)\n",
+            "6 ** 1 = 6 = 6 (True)\n",
+            "6 ** 2 = 1 = 1 (True)\n",
+            "6 ** 3 = 6 = 6 (True)\n",
+            "6 ** 4 = 1 = 1 (True)\n",
+            "6 ** 5 = 6 = 6 (True)\n"
           ]
         }
       ]
